--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
@@ -29,7 +29,7 @@
                 <div class="EmptyBox20"></div>
 
                 <div class="Fs12">
-                    <p:selectOneRadio value="#{tcmpb.formula}"
+                    <p:selectOneRadio value="#{tcmpb.profileProcess}"
                                       layout="pageDirection"
                                       required="true" requiredMessage="Must choose one of the method to change profile.">
                         <f:selectItem
