Prashant 05/10/2017 -New code for BB

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -44,7 +44,7 @@
                     <p:slider id="allocSlider" for="allocValue" minValue="0"
                               maxValue="#{uobpb.maxAssetAllocatonPoints}" step="1">
                         <p:ajax event="slideEnd"
-                                update=":ceForm:graphArea, :ceForm:fineTunePanel"
+                                update=":ceForm:graphArea, :ceForm:inputArea"
                                 listener="#{uobpb.onAllocSlider}" />
                     </p:slider>
                 </div>
