--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -17,14 +17,14 @@
                             </p:effect>
                             <div class="Container100 FTLabel">
                                 <span class="Fs16">Change Strategy</span>
-                                <!--<div class="Wid10 Fright closeFTbtn">
+                                <div class="Wid10 Fright closeFTbtn">
                                     <p:commandButton  styleClass="fineTuneBtn"
                                         icon="fa fa-times">
                                         <p:effect type="slide" event="click" for="fineTunePanel">
                                             <f:param name="mode" value="'hide'" />
                                         </p:effect>
                                     </p:commandButton>
-                                </div>-->
+                                </div>
                             </div>
                             <div class="Fs13 fineTuneDetail">Rather than having a
                                 strategy recommended to me based on my time horizon and risk
@@ -215,7 +215,7 @@
                             <h:inputHidden value="#{tcmpb.charts.chartdata.highChartresultSet}"
                                            id="performanceChart" />
 
-                            <div id="progressChart" class="Fright Wid100">
+                            <div id="progressChart" class="Container100 Wid100">
                                 <!-- Performance Chart Zone -->
                             </div>
                         </p:outputPanel>
