Prashant 05/12/2017 -New code for BB

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/register.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/register.xhtml
@@ -52,10 +52,10 @@
                             <f:facet name="footer">
                                 <div class="Container100" style="text-align: center;">
                                     <p:commandButton value="Review"
-                                                     update=":ceForm:workArea"
+                                                     update=":ceForm:inputArea"
                                                      actionListener="#{tcmpb.gotoReview}"/>
                                     <p:commandButton value="Open Account" type="submit"
-                                                     update=":ceForm:workArea"
+                                                     update=":ceForm:inputArea"
                                                      actionListener="#{tcmpb.gotoCustody}"/>
                                 </div>
                             </f:facet>
